Thu Aug 22 20:08:47 2002  Ossama Othman  <ossama@uci.edu>

	* tao/PortableServer/POA.i (reference_to_servant):

	  Added missing ACE_INLINE declaration.  Fixes a "multiple
	  definition" link-time errors.

Thu Aug 22 16:00:59 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/LoadBalancer/README:

	  Added some detailed usage notes for the LoadManager.

Thu Aug 22 15:24:06 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Monitor.cpp:

	  On Solaris, include <sys/loadavg.h> to pull in the getloadavg()
	  prototype.

Thu Aug 22 14:06:06 2002  Irfan Pyarali  <irfan@oomworks.com>

	* tao/PortableServer/POA.cpp (id_to_servant_i and
	  reference_to_servant_i): If a POA has the USE_DEFAULT_SERVANT
	  policy and a default servant has been registered with the POA,
	  id_to_servant() should return the default servant. But since the
	  original POA spec did not have this requirement, id_to_servant()
	  was throwing the ObjectNotActive exception.  Changed
	  id_to_servant_i() to handle this use
	  case. reference_to_servant() was already handling this use case,
	  but needed some refactoring.

 	  Thanks to Lan Zhineng <lanzn@huawei.com> for reporting this.

	* tests/POA/Default_Servant: Added new test that checks the
	  behavior of POA::id_to_servant() and POA::reference_to_servant()
	  with the use of default servants.

          The following files were added:

	  - tests/POA/Default_Servant/Default_Servant.cpp
	  - tests/POA/Default_Servant/Default_Servant.dsp
	  - tests/POA/Default_Servant/Default_Servant.dsw
	  - tests/POA/Default_Servant/Default_Servant.mpc
	  - tests/POA/Default_Servant/Makefile
	  - tests/POA/Default_Servant/makefile.bor
	  - tests/POA/Default_Servant/run_test.pl
	  - tests/POA/Default_Servant/test.idl

          The following files were added:

	  - tests/TAO_Tests.dsw
	  - tests/POA/Makefile
	  - tests/POA/Makefile.bor
	  - tests/POA/README
	  - ACE_wrappers/bin/auto_run_tests.lst
