@@ -1,3 +1,11 @@
+Fri Aug 23 10:10:17 2002  Jeff Parsons <parsons@cs.wustl.edu>
+
+        * TAO_IDL/ast/ast_operation.cpp (fe_add_argument):
+
+          Added check for anonymous array as operation argument,
+          which is illegal. Thanks to Frank Hunleth <fhunleth@cs.wustl.edu>
+          for reporiting the bug. This closes [BUGID:840].
+
 Thu Aug 22 20:08:47 2002  Ossama Othman  <ossama@uci.edu>
 
 	* tao/PortableServer/POA.i (reference_to_servant):
